--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "reactstrap": "^9.2.2",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
